--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
   "dependencies": {
+    "compression": "1.7.4",
     "ejs": "3.1.3",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "helmet": "3.23.3"
   }
 }
