--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "rcasto.dev",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "webpack --config webpack.config.js --mode production",
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build",
     "deploy": "gcloud config set project rcasto-dev && gcloud app deploy app.yaml"
   },
   "engines": {
@@ -18,6 +20,13 @@
     "compression": "1.7.4",
     "ejs": "3.1.5",
     "express": "4.17.1",
-    "helmet": "4.1.0"
+    "helmet": "4.1.0",
+    "rimraf": "^3.0.2",
+    "social-contact": "file:social-contact-1.0.8.tgz"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "6.0.3",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12"
   }
 }
