--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "6.0.3",
+    "npm-run-all": "4.1.5",
+    "rimraf": "3.0.2",
     "webpack": "4.44.1",
-    "webpack-cli": "3.3.12",
-    "rimraf": "3.0.2"
+    "webpack-cli": "3.3.12"
   }
 }
