fix gcloud deployment

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm-run-all build start:server",
-    "start:server": "node server.js",
+    "start": "node server.js",
     "dev": "npm-run-all clean --parallel start build:dev",
     "build": "npm-run-all clean build:prod",
     "build:dev": "webpack --config webpack.config.js --mode development --watch",
     "build:prod": "webpack --config webpack.config.js --mode production",
     "clean": "rimraf dist",
-    "deploy": "gcloud config set project rcasto-dev && gcloud app deploy app.yaml"
+    "deploy": "npm-run-all build deploy:gcloud",
+    "deploy:gcloud": "gcloud config set project rcasto-dev && gcloud app deploy app.yaml"
   },
   "engines": {
     "node": "12.x",
