--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "6.0.3",
+    "css-loader": "4.2.1",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
+    "style-loader": "1.2.1",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
   }
