--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "social-contact": "1.0.9"
   },
   "devDependencies": {
+    "@babel/core": "7.11.4",
+    "@babel/preset-env": "7.11.0",
+    "babel-loader": "8.1.0",
     "copy-webpack-plugin": "6.0.3",
     "css-loader": "4.2.1",
     "npm-run-all": "4.1.5",
