--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "http-server dist/public",
     "dev": "npm-run-all clean --parallel start build:dev",
     "build": "npm-run-all clean build:prod",
     "build:dev": "webpack --config webpack.config.js --mode development --watch",
     "build:prod": "webpack --config webpack.config.js --mode production",
-    "clean": "rimraf dist",
-    "deploy": "npm-run-all build deploy:gcloud",
-    "deploy:gcloud": "gcloud config set project rcasto-dev && gcloud app deploy app.yaml"
+    "clean": "rimraf dist"
   },
   "engines": {
     "node": "12.x",
@@ -19,21 +17,17 @@
   },
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
-  "dependencies": {
-    "compression": "1.7.4",
-    "ejs": "3.1.5",
-    "express": "4.17.1",
-    "helmet": "4.1.0",
-    "social-contact": "1.0.9"
-  },
   "devDependencies": {
     "@babel/core": "7.11.4",
     "@babel/preset-env": "7.11.0",
     "babel-loader": "8.1.0",
     "copy-webpack-plugin": "6.0.4",
     "css-loader": "4.2.2",
+    "ejs": "3.1.5",
+    "http-server": "0.12.3",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
+    "social-contact": "1.0.9",
     "style-loader": "1.2.1",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
