adjust clean script, adjust build script to use async methods

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "webpack --config webpack.config.js --mode development --watch",
     "build:prod": "webpack --config webpack.config.js --mode production",
     "build:view": "node scripts/buildView.js",
-    "clean": "rimraf dist"
+    "clean": "rimraf docs"
   },
   "engines": {
     "node": "12.x",
