--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-server": "0.12.3",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
+    "simple-track": "0.0.3",
     "social-contact": "1.0.9",
     "style-loader": "2.0.0",
     "webpack": "5.11.1",
