--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "http-server docs",
-    "dev": "npm-run-all clean --parallel start build:dev build:view",
+    "start": "npm run dev",
+    "dev": "npm-run-all clean --parallel dev:server build:dev build:view",
+    "dev:server": "http-server docs",
     "build": "npm-run-all clean build:prod build:view",
     "build:dev": "webpack --config webpack.config.js --mode development --watch",
     "build:prod": "webpack --config webpack.config.js --mode production",
@@ -13,25 +14,25 @@
     "clean": "rimraf docs"
   },
   "engines": {
-    "node": "12.x",
-    "npm": "6.x"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/preset-env": "7.12.11",
-    "babel-loader": "8.2.2",
-    "copy-webpack-plugin": "7.0.0",
-    "css-loader": "5.0.1",
-    "ejs": "3.1.5",
-    "http-server": "0.12.3",
+    "@babel/core": "7.16.5",
+    "@babel/preset-env": "7.16.5",
+    "babel-loader": "8.2.3",
+    "copy-webpack-plugin": "10.2.0",
+    "css-loader": "6.5.1",
+    "ejs": "3.1.6",
+    "http-server": "14.0.0",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
-    "simple-track": "0.0.3",
+    "simple-track": "1.1.1",
     "social-contact": "1.0.9",
-    "style-loader": "2.0.0",
-    "webpack": "5.11.1",
-    "webpack-cli": "4.3.0"
+    "style-loader": "3.3.1",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
   }
 }
