--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "npm-run-all clean --parallel dev:server build:dev build:view",
-    "dev:server": "http-server docs",
-    "build": "npm-run-all clean build:prod build:view",
-    "build:dev": "webpack --config webpack.config.js --mode development --watch",
-    "build:prod": "webpack --config webpack.config.js --mode production",
+    "start": "http-server docs",
+    "build": "npm-run-all clean build:view",
     "build:view": "node scripts/buildView.js",
     "clean": "rimraf docs"
   },
@@ -20,19 +16,9 @@
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.16.5",
-    "@babel/preset-env": "7.16.5",
-    "babel-loader": "8.2.3",
-    "copy-webpack-plugin": "10.2.0",
-    "css-loader": "6.5.1",
     "ejs": "3.1.6",
     "http-server": "14.0.0",
     "npm-run-all": "4.1.5",
-    "rimraf": "3.0.2",
-    "simple-track": "1.1.1",
-    "social-contact": "1.0.9",
-    "style-loader": "3.3.1",
-    "webpack": "5.65.0",
-    "webpack-cli": "4.9.1"
+    "rimraf": "3.0.2"
   }
 }
