--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "http-server docs",
+    "start": "npm-run-all --parallel start:*",
+    "start:server": "http-server docs",
+    "start:dev": "npm-run-all clean watch:view",
     "build": "npm-run-all clean build:view",
     "build:view": "node scripts/buildView.js",
-    "clean": "rimraf docs"
+    "watch:view": "chokidar 'views/**/*.ejs' 'projects/*.js' -c 'npm run build:view' --initial",
+    "clean": "rimraf docs/index.html"
   },
   "engines": {
     "node": "16.x",
@@ -16,6 +19,7 @@
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
   "devDependencies": {
+    "chokidar-cli": "3.0.0",
     "ejs": "3.1.6",
     "http-server": "14.0.0",
     "npm-run-all": "4.1.5",
