--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
+    "@types/node": "^17.0.10",
     "chokidar-cli": "3.0.0",
     "ejs": "3.1.6",
     "http-server": "14.1.0",
     "npm-run-all": "4.1.5",
-    "rimraf": "3.0.2"
+    "rimraf": "3.0.2",
+    "typescript": "4.5.4"
   }
 }
