--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:server": "http-server public",
     "start:dev": "npm-run-all clean watch:view",
     "build": "npm-run-all clean build:view",
-    "build:view": "node scripts/buildView.js",
-    "watch:view": "chokidar 'views/**/*.ejs' 'projects/*.js' -c 'npm run build:view' --initial",
+    "build:view": "ts-node scripts/buildView.ts",
+    "watch:view": "chokidar 'views/**/*.ejs' 'projects/*.ts' -c 'npm run build:view' --initial",
     "clean": "rimraf public/index.html"
   },
   "engines": {
@@ -26,6 +26,7 @@
     "http-server": "14.1.0",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
+    "ts-node": "10.4.0",
     "typescript": "4.5.4"
   }
 }
