--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT",
   "devDependencies": {
-    "@types/ejs": "^3.1.0",
-    "@types/node": "^17.0.10",
+    "@types/ejs": "3.1.0",
+    "@types/node": "17.0.19",
     "chokidar-cli": "3.0.0",
     "ejs": "3.1.6",
     "http-server": "14.1.0",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.4"
+    "ts-node": "10.5.0",
+    "typescript": "4.5.5"
   }
 }
