--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:server": "http-server public",
     "start:dev": "npm-run-all clean watch:view",
     "build": "npm-run-all clean build:view",
-    "build:view": "ts-node scripts/buildView.ts",
-    "watch:view": "chokidar 'views/**/*.ejs' 'projects/*.ts' -c 'npm run build:view' --initial",
+    "build:view": "ts-node scripts/buildView.tsx",
+    "watch:view": "chokidar 'views/**/*.ejs' 'projects/*.ts' 'src/*.tsx' -c 'npm run build:view' --initial",
     "clean": "rimraf public/index.html",
     "new": "npx ts-node scripts/generateProjectTemplate.ts"
   },
@@ -22,10 +22,13 @@
   "devDependencies": {
     "@types/ejs": "3.1.0",
     "@types/node": "17.0.21",
+    "@types/react-dom": "18.0.1",
     "chokidar-cli": "3.0.0",
     "ejs": "3.1.6",
     "http-server": "14.1.0",
     "npm-run-all": "4.1.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "rimraf": "3.0.2",
     "ts-node": "10.7.0",
     "typescript": "4.6.2"
