--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "npm-run-all --parallel start:*",
-    "start:server": "http-server public",
+    "start:server": "nodemon server.js",
     "start:dev": "npm-run-all clean watch:view",
+    "start-docker": "docker-compose up --detach --build",
     "build": "npm-run-all clean build:view",
     "build:view": "ts-node scripts/buildView.tsx",
     "watch:view": "chokidar 'views/**/*.ejs' 'projects/*.ts' 'src/*.tsx' -c 'npm run build:view' --initial",
@@ -26,11 +27,15 @@
     "chokidar-cli": "3.0.0",
     "ejs": "3.1.6",
     "http-server": "14.1.0",
+    "nodemon": "2.0.16",
     "npm-run-all": "4.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "rimraf": "3.0.2",
     "ts-node": "10.7.0",
     "typescript": "4.6.2"
+  },
+  "dependencies": {
+    "express": "4.18.1"
   }
 }
