--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "node-fetch": "2.6.11"
   }
 }
