--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
+    "cookie-parser": "1.4.6",
     "express": "4.18.2",
     "node-fetch": "2.6.11"
   }
