--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "cookie-parser": "1.4.6",
     "express": "4.18.2",
+    "helmet": "7.0.0",
     "node-fetch": "2.6.11"
   }
 }
