--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "npm-run-all --parallel start:*",
-    "start:server": "nodemon server.js",
+    "start:server": "http-server --port 3000 ./public",
     "start:dev": "npm-run-all clean watch:view",
     "build": "npm-run-all clean build:view",
     "build:view": "ts-node scripts/buildView.tsx",
@@ -25,14 +25,12 @@
     "@types/react-dom": "18.0.11",
     "chokidar-cli": "3.0.0",
     "ejs": "3.1.8",
-    "nodemon": "2.0.21",
+    "http-server": "14.1.1",
     "npm-run-all": "4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "4.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
-  },
-  "dependencies": {
   }
 }
